[project]
name = "datav"
version = "0.2.1"
description = "Data visualization tools for Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Tang Ziya", email = "tcztzy@gmail.com" }]
dependencies = [
    "cartopy>=0.23",
    "scikit-learn>=1.5.2",
    "geopandas>=1.0.1",
    "xarray>=2024.7.0",
    "matplotlib>=3.9.2",
    "numpy>=2",
]
classifiers = [
    "Framework :: Matplotlib",
    "Natural Language :: Chinese (Simplified)",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Free For Educational Use",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.280",
    "rpy2>=3.5.16",
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=src"
testpaths = [
    "src",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
extend-select = ["I"]
